redundant elements removed! content section: overflow problem solved.

--- a/src/content/content.scss
+++ b/src/content/content.scss
@@ -1,6 +1,13 @@
+html, body{
+    box-sizing: border-box;
+    overflow-y: auto;
+}
 *{
     padding: 0;
     margin: 0;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+     box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
 @mixin grid-center {
@@ -19,6 +26,7 @@
     padding:20px 40px;
     row-gap: 30px;
     column-gap: 20px;
+    overflow-y: hidden;
     .property{
         .property_image{
             position: relative;
